Fixed spacing

--- a/style.css
+++ b/style.css
@@ -911,6 +911,11 @@ p {
 	font-size:72px;
 }
 
+.ventra-video {
+    margin-top:25px;
+    margin-bottom:25px;
+}
+
 /* = Colour
 -------------------------------------------------------------- */
 
